--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -2,6 +2,7 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
 bcrypt==5.0.0
+beautifulsoup4==4.14.3
 blinker==1.9.0
 certifi==2025.11.12
 cffi==2.0.0
@@ -9,9 +10,11 @@ charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
 cryptography==46.0.3
+curl_cffi==0.13.0
 ecdsa==0.19.1
 fastapi==0.123.5
 Flask==3.1.2
+frozendict==2.4.7
 greenlet==3.2.4
 gunicorn==23.0.0
 h11==0.16.0
@@ -21,28 +24,42 @@ iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
+multitasking==0.0.12
+numpy==2.3.5
 packaging==25.0
+pandas==2.3.3
 passlib==1.7.4
+peewee==3.18.3
+platformdirs==4.5.1
 pluggy==1.6.0
+protobuf==6.33.2
 psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
 Pygments==2.19.2
+PyJWT==2.10.1
 pytest==9.0.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-jose==3.5.0
+python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.3
+redis==7.1.0
 requests==2.32.5
 rsa==4.9.1
 six==1.17.0
+soupsieve==2.8
 SQLAlchemy==2.0.44
 starlette==0.50.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.38.0
 watchfiles==1.1.1
 websockets==15.0.1
 Werkzeug==3.1.4
+yfinance==0.2.66
