--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,67 +2,52 @@ services:
   backend:
     build: ./backend
     container_name: backend
-    env_file:
-      - .env
     ports:
       - "8000:8000"
+    env_file:
+      - .env
     environment:
       REDIS_HOST: ${REDIS_HOST}
       DATABASE_URL: ${DATABASE_URL}
     depends_on:
       - redis
-    volumes:
-      - ./backend:/app
-  auth:
-    build: ./auth
-    container_name : auth
-    restart: always
-    ports: 
-      - "5000:5000"
-    environment:
-      - SECRET_KEY=MyKey@123
-      - DATABASE_URL=postgresql://user:password@market-db:5432/market
-    depends_on:
       - market-db
     volumes:
-     - ./auth:/app
-    
+      - ./backend:/app
+
   worker:
-    build: 
-      context: .
-      dockerfile: worker/Dockerfile
+    build: ./worker
     container_name: worker
     env_file:
       - .env
-    depends_on:
-      - redis
     environment:
       REDIS_HOST: ${REDIS_HOST}
       DATABASE_URL: ${DATABASE_URL}
-      PYTHONPATH: /app
-    working_dir: /app
+    depends_on:
+      - redis
+      - market-db
     volumes:
-      - .:/app
-    command: ["python", "worker/worker_main.py"]
+      - ./worker:/app
+
   redis:
     image: redis:7
     container_name: redis
-    restart: always
     ports:
       - "6379:6379"
+
   market-db:
     image: timescale/timescaledb:latest-pg15
     container_name: market-db
     env_file:
       - .env
-    restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432:5432"
+      - "5434:5432"
     volumes:
       - timescale_data:/var/lib/postgresql/data
+
 volumes:
   timescale_data:
