ADAS backend and redis development is complete

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - market-db
     volumes:
       - ./worker:/app
+    command: ["python", "worker_main.py"]
 
   redis:
     image: redis:7
